[gd_scene load_steps=2 format=3 uid="uid://d3a6r5br2nw5"]

[ext_resource type="Script" path="res://addons/InstanceDock/InstanceDock.gd" id="2"]

[node name="Instances" type="PanelContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 350.0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tabs" type="TabBar" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tab_close_display_policy = 1
drag_to_rearrange_enabled = true

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slots" type="HFlowContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="AddTabLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add tab to continue"
autowrap_mode = 2

[node name="DragLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Drag scene from file system on a slot to assign"
autowrap_mode = 2

[node name="Dialogs" type="Node" parent="."]

[node name="DeleteConfirm" type="ConfirmationDialog" parent="Dialogs"]
unique_name_in_owner = true
size = Vector2i(391, 100)
dialog_text = "This will permanently remove the tab. Continue?"

[node name="AddTabConfirm" type="ConfirmationDialog" parent="Dialogs"]
unique_name_in_owner = true
size = Vector2i(200, 88)

[node name="AddTabName" type="LineEdit" parent="Dialogs/AddTabConfirm"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 39.0
placeholder_text = "Tab name"

[node name="Viewport" type="SubViewport" parent="."]
transparent_bg = true
render_target_update_mode = 3

[connection signal="tab_changed" from="VBoxContainer/HBoxContainer/Tabs" to="." method="on_tab_changed"]
[connection signal="tab_close_pressed" from="VBoxContainer/HBoxContainer/Tabs" to="." method="on_tab_close_attempt"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="on_add_tab_pressed"]
[connection signal="confirmed" from="Dialogs/DeleteConfirm" to="." method="remove_tab_confirm"]
[connection signal="confirmed" from="Dialogs/AddTabConfirm" to="." method="add_tab_confirm"]
[connection signal="text_submitted" from="Dialogs/AddTabConfirm/AddTabName" to="." method="add_tab_confirm"]
